added docker image field
